--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/*body {*/
+/*    background-color: #30303d; color: #fff;*/
+/*}*/
+
+#chartdiv {
+    width: 100%;
+    height: 500px;
+}
+
 .btn-action, .btn-group-action > .btn {
     padding: 0.05rem 0.35rem;
     font-size: 0.75rem;
