--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,27 @@
 /*    background-color: #30303d; color: #fff;*/
 /*}*/
 
-#chartdiv {
+.top-margin {
+    margin-top: 10px;
+}
+
+.bt-margin-sm {
+    margin-bottom: 5px;
+}
+
+.chart-div {
     width: 100%;
-    height: 500px;
+    height: 450px;
+}
+
+.chart-empty-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100%;
+    background-color: #f8f9fa!important;
 }
 
 .btn-action, .btn-group-action > .btn {
